# Zelighted-python

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
delighted/: __init__.py
test/: __init__.py  test_client.py  test_config.py  test_resource.py
zelighted/: __init__.py  client.py  errors.py  http_adapter.py  resource.py  util.py
